[tool.poetry]
name = "pytilz"
version = "0.1.0"
description = ""
authors = ["Ilya Nekhay <nekhayiv@gmail.com>"]
readme = "README.md"
packages = [{include = "pytilz", from = "src"}]


[tool.poetry.dependencies]
python = "^3.10"
respx = "*"


[tool.poetry.group.dev.dependencies]
# Code management
pre-commit = "*"

# Testing
pytest = "*"
pytest-cov = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=src --cov-report html --cov-report xml --cov-config=.coveragerc"
pythonpath = ["src"]
testpaths = ["tests"]


[tool.isort]
profile = "black"


[tool.poetry.plugins."pytest11"]
"pytilz" = "pytilz.fixtures"
